--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
