--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-spinners": "^0.14.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
