--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "react-select": "^5.8.3",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "swiper": "^11.1.15"
