--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-select": "^5.8.3",
+    "react-simple-star-rating": "^5.1.7",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "swiper": "^11.1.15"
