add movie details card

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-simple-star-rating": "^5.1.7",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
