--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-router-dom": "^7.0.2",
     "react-select": "^5.8.3",
     "react-simple-star-rating": "^5.1.7",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.14.5",
     "swiper": "^11.1.15"
   },
