--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-select": "^5.8.3",
